--- a/blogs/_posts/2024-04-16-Litmus-RT学习.md
+++ b/blogs/_posts/2024-04-16-Litmus-RT学习.md
@@ -17,7 +17,7 @@ Linux 内核补丁 + 用户空间接口 + 追踪工具
 
 在实际条件下实现实用的多处理器实时系统研究
 
-为什幺实施『教科书式』调度进程很困难？
+为什么实施『教科书式』调度进程很困难？
 除了通常的内核乐趣：受限环境、特殊 API、难以调试......
 
 如果你正在做内核级别的工作，不管怎样...
