--- a/blogs/_posts/2024-03-19-CFS-Learn.md
+++ b/blogs/_posts/2024-03-19-CFS-Learn.md
@@ -3,12 +3,12 @@ layout: post
 title: Linux内核学习-CFS调度器
 ---
 
-### Motivation
 proj291需要给Linux设计一个新的调度器，故学习一下优秀的CFS调度器是怎么实现的
 
-### Note
+## Note
 
 CFS（完全公平调度器）的主要流程调用：
+
 1. **初始化**：在系统启动时，初始化 CFS 调度器相关数据结构和参数。
 2. **进程创建**：当一个新进程被创建时，为其分配调度实体 `struct sched_entity`，并初始化相关属性。
 3. **进程插入调度队列**：通过调用 `enqueue_task_fair()` 函数，将进程插入 CFS 调度队列中，并更新调度信息。
@@ -22,7 +22,6 @@ CFS（完全公平调度器）的主要流程调用：
 
 
 > 虚拟运行时间 = 实际运行时间 * NICE_0_LOAD / 该任务的权重
-
 
 ### Reference
 
