--- a/blogs/_posts/2024-04-08-DAC23.md
+++ b/blogs/_posts/2024-04-08-DAC23.md
@@ -55,7 +55,7 @@ Hsiu 等 [11] 提出了一种方法，该方法将资源分配给处理器，并
 
 ## 系统模型
 
-我们专注于包含一组相同处理器的系统 Λ 以及根据 FP-FPS 计划安排的一系列零星任务Γ。Λ 中的第 x 个处理器表示为 λx. 任务 τi (Γ 中的第 i 个任务) 定义为 τi = {Ci, Ti, Di, Pi, Ai}，其中 Ci 是不访问共享资源的纯最坏执行时间，Ti 是周期，Di 是受约束的截止时间，Di ≤ Ti, Pi 是优先级，Ai 是分配。每个任务都有唯一的优先级，Pi 值越高表示优先级越高。函数 Γ (λx) 返回分配给 λx 的所有任务的集合。为简单起见，我们使用 u 来表示给定任务或任务组的利用率，例如分别使用 Uτi 和 UΓ (λx)。函数 |·| 表示给定集合的大小，例如，|Λ| 给出系统中的处理器数。
+我们专注于包含一组相同处理器的系统 Λ 以及根据 FP-FPS 计划安排的一系列零星任务Γ。Λ 中的第 x 个处理器表示为 λx. 任务 τi (Γ 中的第 i 个任务) 定义为 τi = {Ci, Ti, Di, Pi, Ai}，其中 Ci 是不访问共享资源的纯最坏执行时间，Ti 是周期，Di 是受约束的截止时间，Di ≤ Ti, Pi 是优先级，Ai 是分配。每个任务都有唯一的优先级，Pi 值越高表示优先级越高。函数 Γ (λx) 返回分配给 λx 的所有任务的集合。为简单起见，我们使用 u 来表示给定任务或任务组的利用率，例如分别使用 Uτi 和 UΓ (λx)。函数 `|·|` 表示给定集合的大小，例如，`|Λ|` 给出系统中的处理器数。
 
 该系统还包含一组受旋转锁保护的共享资源 R。对于资源 rk (R 中的第 k 个资源)，ck 表示 rk 上最坏情况的计算时间，N k i 给出了一个版本中 τi 向 rk 发出的请求数。函数 F (·) 表示给定任务请求的资源。在多个处理器中的任务之间共享的资源称为全局资源，而在处理器中访问的资源称为本地资源。
 此外，还假设了一种基于自旋的资源共享协议来管理共享资源，该协议涵盖了广泛的选择 [3]。但是，没有假设指定系统的协议和关联的可调度性分析。我们假设一个任务在任何时候都只能保存一个资源。但是，可以使用组锁来轻松支持嵌套资源访问，如 [8] 中所述。
